Nombre del proyecto:Tienda musical

--- a/tiendamusical-web/src/main/webapp/pages/commons/scripts.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/scripts.xhtml
@@ -111,6 +111,13 @@ body .ui-paginator {
 	border-width: 1px;
 	padding: 1rem;
 }
+
+body .ui-panelgrid .ui-panelgrid-cell {
+    border: 1px solid #c8c8c8;
+    background-color: black;
+    color: #333;
+    padding: 0.571rem 1rem;
+}
 </style>
 
 </ui:composition>
