--- a/tiendamusical-web/src/main/webapp/pages/commons/dashboard.xhtml
+++ b/tiendamusical-web/src/main/webapp/pages/commons/dashboard.xhtml
@@ -11,17 +11,11 @@
 <h:body style="background-color:black">
 	<div class="ui-fluid">
 		<h:form id="formDashboard">
-		
+
 			<ui:include src="/pages/commons/navbar.xhtml"></ui:include>
-		
+
 			<div class="p-grid sample-layout">
-				<div class="p-col-12 p-md-2" style="background-color: black;">
-					<p:commandLink>
-						<p:graphicImage name="imagenes/fondo_musica.png" width="100%"></p:graphicImage>
-					</p:commandLink>
-					
-					<ui:include src="/pages/commons/panelmenu.xhtml"></ui:include>
-				</div>
+				<ui:include src="/pages/commons/header.xhtml"></ui:include>
 
 				<div class="p-col-12 p-md-10 p-col-nogutter"
 					style="background-color: black;">
@@ -32,14 +26,12 @@
 							<c:if test="#{sessionBean.persona.rol.idRol ==4}">
 								<ui:include src="/pages/cliente/home.xhtml"></ui:include>
 							</c:if>
-							
+
 						</div>
 					</div>
 				</div>
 
-				<div class="p-col-12" style="background-color: black;">
-					<p:outputLabel value="@Copyright by David ZoNe" style="color:white"></p:outputLabel>
-				</div>
+				<ui:include src="/pages/commons/footer.xhtml"></ui:include>
 			</div>
 		</h:form>
 	</div>
